--- a/index.html
+++ b/index.html
@@ -12,6 +12,32 @@
         <title>GuitarLA</title>
     </head>
     <body>
-        
+        <header class="header">
+            <div class="header__container">
+                <div class="header__bar">
+                    <a href="/">
+                        <img src="img/logo.svg" alt="GuitarLA logo" class="header__logo">
+                    </a>
+
+                    <nav class="navigation">
+                        <a href="index.html" class="navigation__link">Home</a>
+                        <a href="about.html" class="navigation__link">About</a>
+                        <a href="blog.html" class="navigation__link">Blog</a>
+                        <a href="store.html" class="navigation__link">Store</a>
+                    </nav>
+                </div> <!-- .header__bar -->
+
+                <div class="model">
+                    <h1 class="model__name">VAI Model</h1>
+                    <p class="model__description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam ut fuga praesentium voluptatibus laudantium! Nemo, quas dolor quidem ab, qui ipsa assumenda laboriosam illum dolorem corporis tempora beatae culpa labore!
+                    </p>
+                    <p class="model__price">$399</p>
+                    <a href="product.html" class="model__link">More Details</a>
+                </div>
+            </div>
+
+            <img src="img/header_guitar.png" alt="Guitar image" class="header__guitar">
+        </header>
     </body>
 </html>
